integrate htmx with db

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,27 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 // import { faker } from "@faker-js/faker";
 // const posts = [{ title: faker.lorem.paragraph(1) }];
-import { db, Post } from "astro:db";
-const posts = await db.select().from(Post);
+import { db, Post, asc } from "astro:db";
+
+const posts = await db.select().from(Post).limit(10).orderBy(asc(Post.id));
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<h1 hx-get="/partials/posts">get partial</h1>
+		<!-- {
+			posts.map((post: typeof Post, i: number, arr: (typeof Post)[]) => {
+				return <Card post={post} loader={arr.length - 1 === i} />;
+			})
+		} -->
 		{
-			posts.map((post) => {
-				return <div>{post.title}</div>;
+			posts.map((post: any, i: number, arr: any[]) => {
+				return (
+					<Card
+						post={post as typeof Post}
+						loader={arr.length - 1 === i}
+					/>
+				);
 			})
 		}
 	</main>
